--- a/manifest.json
+++ b/manifest.json
@@ -4,19 +4,21 @@
   "description": "A Proto-Bulgarian calendar app with dual calendar system and event tracking",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#F5EDE0",
+  "background_color": "#1A1612",
   "theme_color": "#8B4513",
   "orientation": "portrait-primary",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
